--- a/vista/src/main/webapp/index.xhtml
+++ b/vista/src/main/webapp/index.xhtml
@@ -7,7 +7,7 @@
           
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Facelet Title, Holaaaa</title> 
     </h:head>
     <h:body>
         <p:panelGrid class="txt">
