--- a/vista/src/main/webapp/login.xhtml
+++ b/vista/src/main/webapp/login.xhtml
@@ -5,14 +5,10 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:jsf="http://xmlns.jcp.org/jsf"
       >
-<<<<<<< Updated upstream
 
-=======
-((
->>>>>>> Stashed changes
     <h:head>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <link href="style.css" rel="stylesheet" type="text/css"/>
+        <link href="recursos/css/Login.css" rel="stylesheet" type="text/css"/>
         <style>
             
             *{
@@ -68,7 +64,7 @@
                             <p:inputText class ="form-control" placeholder ="Correo:" autocomplete="false" value ="#{loginUI.usuario.correo}" />
                         </div>
                         <div class="form-group">
-                            <p:password class ="form-control" placeholder="Contraseña: " value="#{loginUI.usuario.contrasena}" />
+                            <p:password class ="form-control" placeholder="Contraseña: " value="#{loginUI.usuario.clave}" />
                         </div>
                         <p:commandButton update="messages" class = "btn btn-success" value ="Iniciar sesion" actionListener ="#{loginUI.login()}" />
 
