--- a/vista/src/main/webapp/login.xhtml
+++ b/vista/src/main/webapp/login.xhtml
@@ -66,7 +66,7 @@
                         <div class="form-group">
                             <p:password class ="form-control" placeholder="Contraseña: " value="#{loginUI.usuario.contrasena}" />
                         </div>
-                        <p:commandButton update="messages" class = "btn btn-success" value ="Iniciar sesion" actionListener ="#{loginUI.login()}" />
+                        <p:commandButton update="messages" class = "btn btn-success" value ="Iniciar sesion" action ="#{loginUI.login()}" ajax="false"/>
 
                     </div>
                 </div>
